--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM openjdk:17-slim
+FROM eclipse-temurin:17-jre-alpine
 ENV TZ America/El_Salvador
 COPY *.jar /app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
 EXPOSE 8082
+
